# panshi

./: .env.example  .gitignore  AGENTS.md  APISIX_ADMIN_BLUEPRINT.md  PANSHI_OPENSPEC.yaml  README.md  check_braces.py  docker-compose.yml  prompt-1.txt  prompt-2.txt  session-ses_1f01.md  start.sh  win-run.txt
backend/: .env.development  .env.production  .gitignore  Dockerfile  add_column.py  add_upstream_hash_columns.py  features.yaml  main.py  migrate_current_version.py  pdf_extract.txt  pyproject.toml  test_api.py  test_import.py  test_route_api.py  test_simple.py  uvicorn.err
backend/ansible/: .gitignore  README.md  ansible.cfg  edge.yml
backend/ansible/cmd_scripts/: cron_check.sh  curl_metadata_12306.sh  curl_upstreams_12306.sh  mkdisk.sh  (+11 more)
backend/app/: main.py
backend/data/: panshi.db  panshi.db-old  sample.db
backend/tests/: conftest.py  test_advanced_match_enabled.py  test_allowed_tags.py  test_ansible_service.py  test_auth.py  test_cert_generator.py  test_clickhouse_client.py  test_cluster.py  test_cluster_delete_edge.py  test_cluster_edge_env.py  test_cluster_install.py  test_config_diff.py  test_dns_upstream_plugin_def.py  test_dns_upstream_publish.py  test_edge_client.py  test_edge_client_api.py  test_edge_env_version.py  test_edge_import.py  test_edge_logger.py  test_edge_pack_yml.py  test_excel_export.py  test_feature_gating.py  test_features.py  test_form_reset.py  test_global_rule_list_api.py  test_localization.py  test_metrics_api.py  test_metrics_service.py  test_node_list_api.py  test_node_reload.py  test_node_schema.py  test_plugin_config_list_api.py  test_plugin_metadata.py  test_plugin_metadata_api.py  test_plugin_switches.py  test_plugin_whitelist.py  test_publish_response.py  test_route.py  test_route_advanced.py  test_route_advanced_match.py  (+16 more)
(+1534 files in other folders)
